--- a/PracticaPython.ipynb
+++ b/PracticaPython.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBfgtULXf1bcF2ckp87kS7",
+      "authorship_tag": "ABX9TyPaZa7WbukzqPx91+Qf8OoC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AYJrX3TgDCpj",
-        "outputId": "b1822f2f-cb7e-4413-803c-ea5ea26dc1a0"
+        "outputId": "15a785c0-9d69-4718-c13d-30fc3e594fb4"
       },
       "outputs": [
         {
@@ -47,6 +47,29 @@
       ],
       "source": [
         "print('hello world')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('hello github')"
+      ],
+      "metadata": {
+        "id": "k3FBsZK3EfuM",
+        "outputId": "81d3df71-06ee-4c49-86ad-3a1dd64ce7c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello github\n"
+          ]
+        }
       ]
     }
   ]
