--- a/PracticaPython.ipynb
+++ b/PracticaPython.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaZa7WbukzqPx91+Qf8OoC",
+      "authorship_tag": "ABX9TyMo4B5QlBTQ2cpD/lVgiXWL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,13 +61,60 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "hello github\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime as dt\n",
+        "\n",
+        "\n",
+        "a=dt.date(2021,1,1)\n",
+        "b=dt.date(2021,7,31)\n",
+        "c=dt.date(1990,5,7)\n",
+        "\n",
+        "\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)\n",
+        "\n",
+        "x=dt.time(12,0,0)\n",
+        "y=dt.time(6,30,0)\n",
+        "z=dt.time(9,15,0)\n",
+        "\n",
+        "\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "jFkk44bydCaz",
+        "outputId": "48237ea7-8364-44d9-bf66-067a7dab0520",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2021-01-01\n",
+            "2021-07-31\n",
+            "1990-05-07\n",
+            "12:00:00\n",
+            "06:30:00\n",
+            "09:15:00\n"
           ]
         }
       ]
