--- a/PracticaPython.ipynb
+++ b/PracticaPython.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMo4B5QlBTQ2cpD/lVgiXWL",
+      "authorship_tag": "ABX9TyPbwa8zRoMlZpGR63rrdr8F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,6 +115,75 @@
             "12:00:00\n",
             "06:30:00\n",
             "09:15:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"help(dt.datetime)\"\n",
+        "\n",
+        "x=dt.datetime(2020, 7, 20, 11, 30, 0)\n",
+        "y=dt.datetime(1990, 3, 10, 12, 0, 0)\n",
+        "z=dt.datetime(2021, 1, 1, 0, 0, 0)\n",
+        "\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "SaLyrTgreTEn",
+        "outputId": "10eb1f65-683a-4a4a-cb03-9dcb650b11fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2020-07-20 11:30:00\n",
+            "1990-03-10 12:00:00\n",
+            "2021-01-01 00:00:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "a=dt.date(2020,7,21)\n",
+        "b=dt.date(2020,12,31)\n",
+        "\n",
+        "c=str(a-b)\n",
+        "c=c.split(' ')[0]\n",
+        "c=abs(int(c))\n",
+        "print('Number of days:',c)\n",
+        "\n",
+        "d1 = dt.date(2020, 7, 21)\n",
+        "d2 = dt.date(2020, 12, 31)\n",
+        "diff = abs((d1 - d2).days)\n",
+        "print(f'Number of days: {diff}')"
+      ],
+      "metadata": {
+        "id": "6P0g-05LfliC",
+        "outputId": "14787940-9771-4495-9b0c-3e9e5c7b7aa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of days: 163\n",
+            "Number of days: 163\n"
           ]
         }
       ]
