--- a/PracticaPython.ipynb
+++ b/PracticaPython.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPb1qUri8UiTIxj9DWr91C5",
+      "authorship_tag": "ABX9TyPD9AvuoOvfk+cdixH/fzeq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from datetime\n",
+        "import datetime\n",
         "\n",
         "x=dt.datetime(2020, 7, 21, 7, 39, 39)\n",
         "now = datetime.datetime.now()\n",
@@ -200,24 +200,19 @@
         "print(f'Until the end of the year: {diff}')"
       ],
       "metadata": {
-        "id": "tCspd0Cir6Oy",
-        "outputId": "41639829-6e8a-48dd-c067-4cc8b010a1ee",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tCspd0Cir6Oy",
+        "outputId": "bcd86193-7692-4e01-fe47-6b602835ec36"
       },
-      "execution_count": 14,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "type object 'datetime.timedelta' has no attribute 'timedelta'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-9a493c6f61ce>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2020\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m21\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m39\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m39\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcuenta\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdD\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimedelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2021\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Until the end of the year: {cuenta}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: type object 'datetime.timedelta' has no attribute 'timedelta'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Until the end of the year: 230 days, 9:06:09.311217\n"
           ]
         }
       ]
