--- a/Copia_de_PracticaPython.ipynb
+++ b/Copia_de_PracticaPython.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYuL41iChy5sSiY/LWWidm",
+      "authorship_tag": "ABX9TyNLfa72hHESEs1D8lmDFF1N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,9 +101,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jFkk44bydCaz",
-        "outputId": "1a3d42b7-79c5-4c02-a528-2eb13d2d90ce"
+        "outputId": "39d2c1c7-716f-48c9-cdc4-a88a7bc29db7"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,6 +246,85 @@
             "2020-01-31 00:00:00\n",
             "2020-01-02 06:00:00\n",
             "2020-01-01 00:15:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ini=dt.datetime(2020, 1, 1, 0, 0)\n",
+        "\n",
+        "for i in range(12):\n",
+        "  print(ini+dt.timedelta(hours=8*i))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1xxZUSpEKqqq",
+        "outputId": "87bb6b89-d881-4630-ec8e-cc353ea90a3c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2020-01-01 00:00:00\n",
+            "2020-01-01 08:00:00\n",
+            "2020-01-01 16:00:00\n",
+            "2020-01-02 00:00:00\n",
+            "2020-01-02 08:00:00\n",
+            "2020-01-02 16:00:00\n",
+            "2020-01-03 00:00:00\n",
+            "2020-01-03 08:00:00\n",
+            "2020-01-03 16:00:00\n",
+            "2020-01-04 00:00:00\n",
+            "2020-01-04 08:00:00\n",
+            "2020-01-04 16:00:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ini=dt.datetime(2020, 1, 1, 0, 0)\n",
+        "delta = dt.timedelta(hours=8)\n",
+        "dates = [ini + i * delta for i in range(12)]\n",
+        "\n",
+        "for date in dates:\n",
+        "    print(date)\n",
+        "\n",
+        "print(dates)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MIDJ1fjNMJz_",
+        "outputId": "f9d828f2-9695-4c8c-9630-f5eb3517064d"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2020-01-01 00:00:00\n",
+            "2020-01-01 08:00:00\n",
+            "2020-01-01 16:00:00\n",
+            "2020-01-02 00:00:00\n",
+            "2020-01-02 08:00:00\n",
+            "2020-01-02 16:00:00\n",
+            "2020-01-03 00:00:00\n",
+            "2020-01-03 08:00:00\n",
+            "2020-01-03 16:00:00\n",
+            "2020-01-04 00:00:00\n",
+            "2020-01-04 08:00:00\n",
+            "2020-01-04 16:00:00\n",
+            "[datetime.datetime(2020, 1, 1, 0, 0), datetime.datetime(2020, 1, 1, 8, 0), datetime.datetime(2020, 1, 1, 16, 0), datetime.datetime(2020, 1, 2, 0, 0), datetime.datetime(2020, 1, 2, 8, 0), datetime.datetime(2020, 1, 2, 16, 0), datetime.datetime(2020, 1, 3, 0, 0), datetime.datetime(2020, 1, 3, 8, 0), datetime.datetime(2020, 1, 3, 16, 0), datetime.datetime(2020, 1, 4, 0, 0), datetime.datetime(2020, 1, 4, 8, 0), datetime.datetime(2020, 1, 4, 16, 0)]\n"
           ]
         }
       ]
